--- a/src/MakaMek.Avalonia/MakaMek.Avalonia.Desktop/MakaMek.Avalonia.Desktop.csproj
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia.Desktop/MakaMek.Avalonia.Desktop.csproj
@@ -24,8 +24,8 @@
         <PackageReference Include="Avalonia.Desktop" Version="11.2.6" />
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.2.6" />
+        <PackageReference Include="Sanet.Transport.SignalR.Server" Version="0.5.0" />
         <PackageReference Include="Velopack" Version="0.0.1053" />
-        <PackageReference Include="Sanet.Transport.SignalR" Version="0.4.2" />
     </ItemGroup>
 
     <ItemGroup>
