refactor: move presentation logic to its own project

--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/MakaMek.Avalonia.csproj
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/MakaMek.Avalonia.csproj
@@ -38,6 +38,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\MakaMek.Core\MakaMek.Core.csproj" />
+      <ProjectReference Include="..\..\MakaMek.Presentation\MakaMek.Presentation.csproj" />
     </ItemGroup>
 
     <ItemGroup>
