--- a/tests/MakaMek.Core.Tests/MakaMek.Core.Tests.csproj
+++ b/tests/MakaMek.Core.Tests/MakaMek.Core.Tests.csproj
@@ -35,6 +35,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\MakaMek.Core\MakaMek.Core.csproj" />
+    <ProjectReference Include="..\..\src\MakaMek.Presentation\MakaMek.Presentation.csproj" />
   </ItemGroup>
 
   <ItemGroup>
