--- a/src/MakaMek.Core/MakaMek.Core.csproj
+++ b/src/MakaMek.Core/MakaMek.Core.csproj
@@ -19,6 +19,10 @@
       <PackageReference Include="Sanet.Transport.SignalR.Client" Version="0.5.0" />
       <PackageReference Include="System.Reactive" Version="6.0.1" />
     </ItemGroup>
+    
+    <ItemGroup>
+      <ProjectReference Include="..\MakaMek.SourceGenerators\MakaMek.SourceGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+    </ItemGroup>
 
     <!-- Debug target to print properties -->
     <Target Name="PrintProperties" BeforeTargets="Build">
