--- a/src/MakaMek.Core/MakaMek.Core.csproj
+++ b/src/MakaMek.Core/MakaMek.Core.csproj
@@ -14,6 +14,8 @@
     </ItemGroup>
     
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.7" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.7" />
       <PackageReference Include="Sanet.MVVM.Core" Version="1.1.1" />
       <PackageReference Include="Sanet.Transport.Rx" Version="1.0.2" />
       <PackageReference Include="Sanet.Transport.SignalR.Client" Version="0.5.0" />
