feat: include new makamek unit packages in resources

--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/MakaMek.Avalonia.csproj
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/MakaMek.Avalonia.csproj
@@ -19,6 +19,10 @@
 
     <ItemGroup>
         <EmbeddedResource Include="Resources\**\*.mtf" />
+        <None Remove="Resources\Units\Mechs\LCT-1V.mmux" />
+        <EmbeddedResource Include="Resources\Units\Mechs\LCT-1V.mmux" />
+        <None Remove="Resources\Units\Mechs\SHD-2D.mmux" />
+        <EmbeddedResource Include="Resources\Units\Mechs\SHD-2D.mmux" />
     </ItemGroup>
 
     <ItemGroup>
