--- a/tests/MakaMek.Presentation.Tests/MakaMek.Presentation.Tests.csproj
+++ b/tests/MakaMek.Presentation.Tests/MakaMek.Presentation.Tests.csproj
@@ -40,14 +40,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="..\..\src\MakaMek.Avalonia\MakaMek.Avalonia\Resources\Units\Mechs\LCT-1V.mtf">
-      <Link>Resources\Mechs\LCT-1V.mtf</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\..\src\MakaMek.Avalonia\MakaMek.Avalonia\Resources\Units\Mechs\SHD-2D.mtf">
-      <Link>Resources\Mechs\SHD-2D.mtf</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <Folder Include="..\..\src\MakaMek.Avalonia\MakaMek.Avalonia\Resources\Units\Mechs\">
+      <Link>Resources\Mechs</Link>
+    </Folder>
   </ItemGroup>
 
 </Project>
