fix: clarify mtf tool output dir creation

--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/MakaMek.Avalonia.csproj
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/MakaMek.Avalonia.csproj
@@ -18,135 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <EmbeddedResource Include="Resources\Units\Mechs\LCT-1V.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\SHD-2D.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\ARC-2K.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\ARC-2W.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\AS7-D-DC.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\AS7-RS.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\ASN-101.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\AWS-8R.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\AWS-8T.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\AWS-8V.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\BJ-1.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\BJ-1DB.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\BJ-1DC.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\BL-7-KNT.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\BL-7-KNT-L.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\BLR-1D.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\BLR-1G-DC.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\BMB-10D.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\BNC-3E.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\BNC-3M.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\BNC-3MC.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\BNC-3Q.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\BNC-3S.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\CDA-2B.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\CDA-3C.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\CGR-1A5.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\CGR-1L.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\CHP-2N.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\CLNT-2-4T.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\CN9-AH.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\COM-1D.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\COM-3A.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\CP-10-Q.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\CPLT-A1.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\CPLT-C1.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\CPLT-C4.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\CPLT-K2.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\CRB-20.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\CRD-3D.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\CRD-3K.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\CRD-3R.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\CRK-5003-0.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\CTF-2X.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\GLT-4L.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\GRF-1S.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\HBK-4H.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\HBK-4J.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\HBK-4N.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\HBK-4P.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\HBK-4SP.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\HER-1A.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\HER-1B.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\HGN-733.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\HGN-733C.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\HGN-733P.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\HNT-151.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\HNT-152.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\HSR-300-D.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\HSR-350-D.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\JM6-A.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\JM6-S.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\JR7-F.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\KTO-18.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\LCT-1E.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\LCT-1M.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\LCT-1S.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\LNC25-02.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\MAD-3D.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\MAD-3L.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\MAD-3M.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\MAD-3R.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\MON-67.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\MON-68.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\ON1-V.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\ON1-V-DC.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\ON1-VA.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\OSR-2L.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\OSR-2M.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\OSR-3C.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\OTL-4F.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\PNT-9R.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\PXH-1.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\PXH-1D.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\PXH-1K.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\RFL-3C.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\RFL-3N.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\RFL-4D.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\RVN-2X.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\RVN-4X.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\SDR-5D.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\SDR-5K.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\SDR-5V.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\SHD-2H.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\SHD-2K.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\STG-3G.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\STG-3R.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\STK-3H.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\STK-4N.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\STK-4P.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\STN-1S.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\STN-3K.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\STN-3KA.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\STN-3KB.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\TBT-5J.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\TBT-5N.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\TBT-5S.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\TBT-7K.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\THE-S.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\THE-T.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\THG-10E.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\UM-R60L.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\VL-5T.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\VLK-QA.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\VLK-QF.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\VND-1R.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\VND-1SIC.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\VTR-9S.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\WHM-6D.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\WHM-6K.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\WHM-6L.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\WSP-1D.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\WSP-1K.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\WSP-1L.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\WSP-1W.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\WTH-0.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\WTH-1.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\WVE-6N.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\WVR-6M.mmux" />
-        <EmbeddedResource Include="Resources\Units\Mechs\WVR-6R.mmux" />
+        <EmbeddedResource Include="Resources\Units\Mechs\**\*.mmux" />
     </ItemGroup>
 
     <ItemGroup>
