--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/MakaMek.Avalonia.csproj
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/MakaMek.Avalonia.csproj
@@ -28,6 +28,7 @@
         <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.3.0.6" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.2" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.2" />
+        <PackageReference Include="PanAndZoom" Version="11.3.9.1" />
         <PackageReference Include="Sanet.MVVM.DI.Avalonia" Version="1.4.1138" />
         <PackageReference Include="Sanet.MVVM.Navigation.Avalonia" Version="1.4.11383" />
         <PackageReference Include="Sanet.MVVM.Views.Avalonia" Version="1.4.11380" />
