--- a/src/MakaMek.Avalonia/MakaMek.Avalonia.Android/Properties/AndroidManifest.xml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia.Android/Properties/AndroidManifest.xml
@@ -3,7 +3,7 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<application
 			android:label="MakaMek"
-			android:icon="@drawable/Icon"
+			android:icon="@drawable/icon"
 			android:usesCleartextTraffic="true">
 	</application>
 </manifest>
