--- a/src/MakaMek.Core/MakaMek.Core.csproj
+++ b/src/MakaMek.Core/MakaMek.Core.csproj
@@ -14,9 +14,9 @@
     </ItemGroup>
     
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9" />
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.9" />
-      <PackageReference Include="Sanet.MVVM.Core" Version="1.2.0" />
+      <PackageReference Include="AsyncAwaitBestPractices" Version="9.0.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.10" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.10" />
       <PackageReference Include="Sanet.Transport.Rx" Version="1.0.2" />
       <PackageReference Include="Sanet.Transport.SignalR.Client" Version="0.5.0" />
       <PackageReference Include="System.Reactive" Version="6.1.0" />
