--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -57,6 +57,7 @@ jobs:
             --packVersion ${{ env.APP_VERSION }} \
             --packDir publish \
             --mainExe MakaMek.exe \
+            --signParallel 12 \
             --signTemplate "jsign --certfile $GITHUB_WORKSPACE/certs/sign.crt --keyfile $GITHUB_WORKSPACE/certs/sign.key --tsaurl http://timestamp.digicert.com --name MakaMek --url https://makamek.nl {{file}}"
 
       # For tagged releases only
