--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -61,7 +61,7 @@ jobs:
             --icon $GITHUB_WORKSPACE/src/MakaMek.Avalonia/MakaMek.Avalonia/Assets/avalonia-logo.ico \
             --mainExe MakaMek.exe \
             --signParallel 12 \
-            --signTemplate "jsign --certfile $GITHUB_WORKSPACE/certs/sign.crt --keyfile $GITHUB_WORKSPACE/certs/sign.key --tsaurl https://timestamp.digicert.com --name MakaMek --url https://makamek.nl {{file}}"
+            --signTemplate "jsign --certfile $GITHUB_WORKSPACE/certs/sign.crt --keyfile $GITHUB_WORKSPACE/certs/sign.key --tsaurl http://timestamp.digicert.com --name MakaMek --url https://makamek.nl {{file}}"
 
       # For tagged releases only
       - name: Create Release
