--- a/.github/workflows/build-mac.yml
+++ b/.github/workflows/build-mac.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - feat/build-mac
     tags:
       - 'v*'  # Run on version tags
   workflow_dispatch:  # Allow manual triggering
