fix: rewrite publish command in one line

--- a/.github/workflows/build-mac.yml
+++ b/.github/workflows/build-mac.yml
@@ -36,11 +36,7 @@ jobs:
       - name: Build Mac App
         run: |
           cd src/MakaMek.Avalonia/MakaMek.Avalonia.Desktop
-          dotnet publish \ 
-            -c Release \
-            -r osx-x64 \
-            -p:UseAppHost=true \
-            -o publish
+          dotnet publish -c Release -r osx-x64 -p:UseAppHost=true -o publish
 
       - name: Install Apple certificates and notary profile
         env:
